@@ -1,30 +1,17 @@
 # apns-http2
 
-[![Build Status](https://travis-ci.org/CleverTap/apns-http2.svg?branch=master)](https://travis-ci.org/CleverTap/apns-http2)
+# WIP
+Experimental support for Java 9, using the new HTTP/2 API.
 
-A Java library for sending notifications via APNS using Apple's new HTTP/2 API.
-This library uses OkHttp.
-Previous versions included support for Jetty's client,
-however, we've removed that due to instability of the Jetty client.
+[![Build Status](https://travis-ci.org/CleverTap/apns-http2.svg?branch=java9)](https://travis-ci.org/CleverTap/apns-http2)
 
-**Note:** Ensure that you have Jetty's ALPN JAR (OkHttp requires it) in your boot classpath. [See here for more information](http://www.eclipse.org/jetty/documentation/current/alpn-chapter.html).
-This is required until Java 9 is released, as Java 8 does not have native support for HTTP/2.
+A Java library for sending notifications via APNs using Apple's new HTTP/2 API.
+This library only supports Java 9 and above.
+
+**NOTE:** You need to add --add-opens. See [https://github.com/CleverTap/apns-http2/wiki/Running-on-Java-9](here).
 
 ## Installation
 - Clone this repository, and add it as a dependent maven project
-- Maven
-```
-<dependency>
-  <groupId>com.clevertap.apns</groupId>
-  <artifactId>apns-http2</artifactId>
-  <version>1.0.3</version>
-  <type>pom</type>
-</dependency>
-```
-- Gradle  
-```
-compile 'com.clevertap.apns:apns-http2:1.0.3'
-```
 
 ## Usage
 
@@ -43,7 +30,7 @@ final ApnsClient client = new ApnsClientBuilder()
         .build();
 ```
 
-#### Using provider authentication tokens
+#### Using provider authentication tokens (recommended)
 ```
 final ApnsClient client = new ApnsClientBuilder()
         .inSynchronousMode()
